# MD-Digital-test-task

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
apps/: populate_db.py  viewsets.py
apps/group/: factories.py  models.py  serializers.py  urls.py  views.py
apps/group/migrations/: 0001_initial.py  0002_alter_team_name_alter_team_users.py
apps/user/: admin.py  factories.py  serializers.py  views.py
apps/user/management/commands/: populate_db.py
apps/user/migrations/: 0001_initial.py  0002_alter_user_email.py  0003_alter_user_managers.py
core/: settings.py  urls.py
fixtures/: group.json  user.json
